--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <title>Hello Phaser</title>
     <link rel="stylesheet" href="styles/app.css" type="text/css" />
-    <script src="phaser.js"></script>
-    <script src="app.js"></script>
+    <script src="js/phaser.min.js" type="text/javascript"></script>
+    <script src="js/app.js" type="text/javascript"></script>
 </head>
 <body>
     <div id="content"></div>
